[package]
name = "rust-z3-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meeting"
path = "src/prob1.rs"

[[bin]]
name = "meeting2"
path = "src/prob2.rs"

[[bin]]
name = "einstein"
path = "src/prob3.rs"

[[bin]]
name = "solidity-1"
path = "src/prob4.rs"

[[bin]]
name = "div-by-100"
path = "src/div-by-100.rs"


[dependencies]
anyhow = "1.0.94"
array-init = "2.1.0"
z3 = {version="0.12", features = ["static-link-z3"]}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
